--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: krabruuxAkeril
-desc: Krablūx Ƣeznē'bixic Akerilic
+name: ildic_ci
+desc: Integrated Languages Dictionary Console Interface - Dictionary Client(Command Line Tool)
 
 environment:
-  sdk: ">=2.10.0 <3.0.0"
+  sdk: ">=2.14.0 <3.0.0"
